Empty site title.

--- a/src/plonetheme/future_imperfect/theme/manifest.cfg
+++ b/src/plonetheme/future_imperfect/theme/manifest.cfg
@@ -9,4 +9,4 @@ directory = template-overrides
 
 [theme:parameters]
 ajax_load = python:request.form.get('ajax_load')
-site_title = string:Type title here
+site_title = string:
